--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 # Configuration du client Alfred
-alfred.url = http://alfresco-test:8080/alfresco/s/apix
-alfred.username = admin
-alfred.password = admin
+# alfred.url = http://alfresco-test:8080/alfresco/s
+# alfred.username = admin
+# alfred.password = admin
+# alfred.new-document.path = /app:company_home/cm:VDL
+# alfred.new-document.name = charly.jpeg
+# alfred.new-document.location:src/main/resources/charly.jpeg
+node.content = workspace://SpacesStore/806e0b43-c5e1-4466-9428-3d97281373d4
