--- a/pom.xml
+++ b/pom.xml
@@ -5,52 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>be.liege.ged.apix</groupId>
-    <artifactId>test</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>root</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <!--<version>2.0.0.M4</version>-->
-        <version>1.5.8.RELEASE</version>
-    </parent>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <validation-api.version>1.1.0.Final</validation-api.version>
-        <hibernate-validator.version>5.4.1.Final</hibernate-validator.version>
-        <!--<hibernate-validator.version>6.0.2.Final</hibernate-validator.version>-->
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
-    <!--<repositories>-->
-        <!--<repository>-->
-            <!--<id>repository.spring.milestone</id>-->
-            <!--<name>Spring Milestone Repository</name>-->
-            <!--<url>http://repo.spring.io/milestone</url>-->
-        <!--</repository>-->
-    <!--</repositories>-->
+    <modules>
+        <module>be.liege.ged.apix.vdl.api</module>
+        <module>be.liege.ged.apix.test/search</module>
+        <module>be.liege.ged.apix.test/insert</module>
+    </modules>
 
 </project>
